feat: manually release direct ByteBuffer